tests/baselines/reference/contextualTyping11.errors.txt
==== tests/cases/compiler/contextualTyping11.ts (1 errors) ====
    class foo { public bar:{id:number;}[] = [<foo>({})]; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! contextualTyping11.ts(1,13): error TS2012: Cannot convert 'foo[]' to '{ id: number; }[]':
!!! 	Types of property 'pop' of types 'foo[]' and '{ id: number; }[]' are incompatible:
!!! 		Call signatures of types '() => foo' and '() => { id: number; }' are incompatible:
!!! 			Type 'foo' is missing property 'id' from type '{ id: number; }'.